# zoo

./: .clang  .clang-format  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .vimrc  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  Tupfile  Tuprules.tup  penguin.sln  penguin.vcxproj
fox/: CMakeLists.txt  Tupfile  Tuprules.tup  guest.cpp  guest.h  memtable.cpp  memtable.h  mmio_device.cpp  mmio_device.h
fox/amd64/: .gitignore  Tupfile  amd64.py  amd64_assembler.csv  amd64_compiler.cpp  amd64_compiler.h  amd64_compiler.hh  amd64_internal.h  amd64_opcodes.h  amd64_routine.cpp  amd64_routine.h  amd64_types.h
fox/arm64/: .gitignore  Tupfile  arm64.py  arm64_assembler.json  arm64_compiler.cpp  arm64_compiler.h  arm64_logical_immediates.cpp  arm64_logical_immediates.h  arm64_opcode.h  arm64_routine.cpp  arm64_routine.h
fox/bytecode/: Tupfile  bytecode.h  compiler.cpp  compiler.h  opcode.h  routine.cpp
fox/codegen/: routine.cpp  routine.h
fox/include/fox/: fox_types.h  fox_utils.h  ir_assembler.h  ir_opcode.h  ir_operand.h  ir_types.h
fox/ir/: execution_unit.cpp  execution_unit.h  instruction.h  ir_assembler.cpp  ir_calculator.cpp  ir_calculator.h  ir_instruction.cpp  ir_opcode.cpp  optimizer.cpp  optimizer.h
fox/jit/: cache.cpp  cache.h  linear_register_allocator.cpp  linear_register_allocator.h  register_allocator.cpp  register_allocator.h  routine.cpp  routine.h  rtl.cpp  rtl.h  types.h
fox/memory/: region.cpp  region.h
fox/tests/: Tupfile  dummy.h  test_amd64_assembler.cpp  test_amd64_compiler.cpp  test_arm64_assembler.cpp  test_arm64_compiler.cpp  test_arm64_logical_immediates.cpp  test_bytecode.cpp  test_codegen.cpp  test_ir.cpp  test_ir_calculator.cpp  test_ir_optimizer.cpp  test_jit_cache.cpp.disabled  test_memtable.cpp  test_register_alloc.cpp
fox/utils/: error.h  file_handle.h  format.h
src/: CMakeLists.txt  Tupfile  Tuprules.tup
src/apu/: README.md  aica.cpp  aica.h  aica_arm.cpp  aica_arm.h  aica_rtc.cpp  aica_rtc.h  audio.cpp  audio.h  audio_dummy.cpp  audio_dummy.h  audio_sdl.cpp  audio_sdl.h
src/core/: Tupfile  console.cpp  console.h  interrupt_types.h  placeholder_mmio.cpp  placeholder_mmio.h  register_state.h  registers.cpp  registers.h  system_bus_g1.cpp  system_bus_g1.h  system_bus_g2.cpp  system_bus_g2.h  system_bus_g2_regs.inc.h  system_bus_mmio.cpp  system_bus_mmio.h
src/frontend/: console_director.cpp  console_director.h  controllers.h  sdk_symbol_manager.cpp  sdk_symbols.cpp  sdk_symbols.h  sdl2_frontend_support.cpp  sdl2_frontend_support.h  sdl2_vulkan_frontend.cpp  sdl2_vulkan_frontend.h
src/gpu/: display_list.h  framebuffer.cpp  framebuffer.h  graphics_registers.h  holly.cpp  holly.h  opengl3_renderer.cpp  opengl3_renderer.h  opengl_shader_program.cpp  opengl_shader_program.h  renderer.h  ta_commands.h  texture.cpp  texture.h  texture_fifo.cpp  texture_fifo.h  texture_manager.cpp  texture_manager.h  tile_accelerator_registers.h  vram.cpp  vram.h
src/guest/arm7di/: README.md  arm7di.cpp  arm7di.h  arm7di_disas.cpp  arm7di_disas.h  arm7di_ir.cpp  arm7di_ir.h  arm7di_jit.cpp  arm7di_jit.h  arm7di_shared.h
src/guest/r3000/: decoder.cpp  decoder.h  r3000.cpp  r3000.h  r3000_disas.cpp  r3000_disas.h  r3000_ir.cpp  r3000_ir.h  r3000_jit.cpp  r3000_jit.h
src/guest/rv32/: isa_rv32_base.cpp  isa_rv32_m.cpp  isa_rv32_zicond.cpp  isa_rv32_zicsr.cpp  rv32.cpp  rv32.h  rv32_ir.cpp  rv32_ir.h  rv32_jit.cpp  rv32_jit.h
src/guest/sh4/: .gitignore  Tupfile  sh4.cpp  sh4.h  sh4_debug.cpp  sh4_debug.h  sh4_elf.cpp  sh4_ir.cpp  sh4_ir.h  (+9 more)
src/gui/: graph.h  imgui_container.cpp  imgui_container.h  opengl_image.cpp  opengl_image.h  widget.cpp  widget.h  widget_cpu_stepper.cpp  widget_cpu_stepper.h  widget_disassembly.cpp  widget_disassembly.h  widget_ir_analysis.cpp  widget_ir_analysis.h  widget_memory_table.cpp  widget_memory_table.h  window.h  window_audio.cpp  window_audio.h  window_cpu.cpp  window_cpu.h  window_cpu_guest.h  window_cpu_guest_arm7di.cpp  window_cpu_guest_arm7di.h  window_cpu_guest_dragon.cpp  window_cpu_guest_dragon.h  window_cpu_guest_r3000.cpp  window_cpu_guest_r3000.h  window_cpu_guest_sh4.cpp  window_cpu_guest_sh4.h  window_cpu_mmio.cpp  window_cpu_mmio.h  window_graphics.cpp  window_graphics.h  window_io_activity.cpp  window_io_activity.h  window_jit_cache.cpp  window_jit_cache.h  window_jit_workbench.cpp  window_jit_workbench.h  window_logger.cpp  (+7 more)
src/local/: game_library.cpp  game_library.h  settings.cpp  settings.h
src/media/: cdrom_primer.md  chd_disc.cpp  chd_disc.h  disc.cpp  disc.h  gdi_disc.cpp  gdi_disc.h  gdrom_utilities.cpp  gdrom_utilities.h  iso9660.h
src/peripherals/: controller.cpp  controller.h  device.cpp  device.h  flashrom.cpp  flashrom.h  gdrom.cpp  gdrom.h  keyboard.cpp  keyboard.h  maple.cpp  maple.h  modem.cpp  modem.h  protocol.h  region_free_dreamcast_disc.cpp  region_free_dreamcast_disc.h  vmu.cpp  vmu.h
src/renderer/: vkinit.cpp  vkinit.h  vma_impl.cpp  vulkan.cpp  vulkan.h
src/serialization/: README.md  input_timeline.cpp  input_timeline.h  serializer.h  session.cpp  session.h  storage.cpp  storage.h  stream.cpp  stream.h
src/shared/: ansi_color_constants.h  argument_parser.h  async_fifo.cpp  async_fifo.h  bitmanip.h  cpu.h  crc32.cpp  crc32.h  custom_new_delete.cpp  elf2.h  error.cpp  error.h  exec.h  execution_graph.cpp  execution_graph.h  fifo_engine.cpp  fifo_engine.h  file.h  file_watch.cpp  file_watch.h  freelist.h  guest_memory_usage.h  intrusive_structures.h  log.cpp  log.h  math.h  parsing.h  platform.h  print.cpp  print.h  profiling.h  register_definition.h  scheduler.cpp  scheduler.h  span.h  stopwatch.h  string.h  trace.cpp  trace.h  types.cpp  (+2 more)
src/targets/: Tupfile  benchmark.cpp  chd_extract_audio_tracks.cpp  chd_test.cpp  cli.cpp.disabled  detwiddle.cpp  disassembler.cpp  dragon.cpp  gamedir_index_test.cpp  old_double_pengu.cpp.nobuild  penguin-game-test.cpp  penguin.cpp  print-gdrom-metadata.cpp  settings_test.cpp  snake.cpp  wgpu_test.cpp
src/tests/: Tupfile  test_arm7di.cpp  test_r3000.cpp  test_rv32.cpp  test_serialization_stream.cpp  test_utilities.cpp
(+109 files in other folders)
